; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_iflib.c_iflib_device_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_iflib.c_iflib_device_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iflib_device_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @device_get_softc(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @CTX_LOCK(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @IFDI_SUSPEND(i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @CTX_UNLOCK(i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @bus_generic_suspend(i32 %12)
  ret i32 %13
}

declare dso_local i32 @device_get_softc(i32) #1

declare dso_local i32 @CTX_LOCK(i32) #1

declare dso_local i32 @IFDI_SUSPEND(i32) #1

declare dso_local i32 @CTX_UNLOCK(i32) #1

declare dso_local i32 @bus_generic_suspend(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
